Fixed some clipping. Added overflow and save-selected icons.

--- a/src/less/icon/ds6/icon.less
+++ b/src/less/icon/ds6/icon.less
@@ -103,6 +103,10 @@
     .icon-mixin('icon-search-bold', { .icon-search-bold() });
 }
 
+.icon--overflow {
+    .icon-mixin('icon-overflow', { .icon-overflow() });
+}
+
 .icon--bids {
     .icon-mixin('icon-bids', { .icon-bids() });
 }
@@ -153,6 +157,10 @@
 
 .icon--save-bold {
     .icon-mixin('icon-save-bold', { .icon-save-bold() });
+}
+
+.icon--save-selected {
+    .icon-mixin('icon-save-selected', { .icon-save-selected() });
 }
 
 .icon--camera {
